@@ -1507,6 +1507,12 @@
                 <groupId>io.airlift.resolver</groupId>
                 <artifactId>resolver</artifactId>
                 <version>1.4</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.ning</groupId>
+                        <artifactId>async-http-client</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
@@ -2060,6 +2066,10 @@
                         <groupId>org.roaringbitmap</groupId>
                         <artifactId>RoaringBitmap</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>org.asynchttpclient</groupId>
+                        <artifactId>async-http-client</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
 
@@ -2359,6 +2369,14 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.asynchttpclient/async-http-client -->
+            <dependency>
+                <groupId>org.asynchttpclient</groupId>
+                <artifactId>async-http-client</artifactId>
+                <version>3.0.1</version>
+            </dependency>
+
 
             <dependency>
                 <groupId>org.checkerframework</groupId>
@@ -2935,6 +2953,9 @@
                     </dependency>
                 </dependencies>
                 <configuration combine.children="append">
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=1024m</argLine>
                     <includes>
                         <include>**/Test*.java</include>
                         <include>**/Benchmark*.java</include>
